--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>To My Dear Harini ❤️</h1>
 
     <div class="photos">
-        <img src="images/photo1.jpg">
-        <img src="images/photo2.jpg">
-        <img src="images/photo3.jpg">
+        <img src="IMG_20251031_143330853 .jpg">
+        <img src="IMG_20260113_192742773. jpg">
+        <img src="IMG_20251031_143330853 .jpg">
     </div>
 
     <p class="message">
@@ -69,7 +69,7 @@
         <button onclick="showFuture()">Our better future ❤️</button>
     </div>
 
-    <img id="futureImage" src="images/future.jpg">
+    <img id="futureImage" src="Picsart_26-02-21_21-13-17 -324.jpg">
 </section>
 
 <!-- REALLY PAGE -->
