--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>To My Dear Harini ❤️</h1>
 
     <div class="photos">
-        <img src="IMG_20251031_143330853 .jpg">
-        <img src="IMG_20260113_192742773. jpg">
-        <img src="IMG_20251031_143330853 .jpg">
+        <img src="WhatsApp Image 2026-02-25 at 4.23.54 PM (1)">
+        <img src="WhatsApp Image 2026-02-25 at 4.23.54 PM (2)">
+        <img src="WhatsApp Image 2026-02-25 at 4.23.55 PM">
     </div>
 
     <p class="message">
