--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button onclick="showFuture()">Our better future ❤️</button>
     </div>
 
-    <img id="futureImage" src="Picsart_26-02-21_21-13-17 -324.jpg">
+    <img id="futureImage" src="WhatsApp Image 2026-02-25 at 4.23.54 PM">
 </section>
 
 <!-- REALLY PAGE -->
